--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- The DOCTYPE tells the browser what kind of document this is (HTML) -->
+  <!-- The DOCTYPE tells the browser what kind of document this is (HTML) -->
 
-<head>
-  <!-- The head tag includes important information about the page -->
-  <meta charset="UTF-8">
-  <!-- This is the title of your page (what appears in the name of a browser tab) -->
-  <title>Dans Portfolio</title>
+  <head>
+    <!-- The head tag includes important information about the page -->
+    <meta charset="UTF-8">
+    <!-- This is the title of your page (what appears in the name of a browser tab) -->
+    <title>Dans Portfolio</title>
 
-  <!-- importing flexbox -->
-  <link rel="stylesheet" href="https://unpkg.com/flexbox-style@latest/flexbox.min.css" />
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+    <!-- importing flexbox -->
+    <link rel="stylesheet" href="https://unpkg.com/flexbox-style@latest/flexbox.min.css" />
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
 
-<body>
-  <div class="all">
-    <!-- The top section of the page with a log and my name/description -->
-    <header class="header">
-      <div class="title">
-        <h1>Cat Clicker</h1>
-        <h3 id="score">You have clicked the cat <strong>0</strong> times!!</h3>
+  <body>
+    <div class="all">
+      <!-- The top section of the page with a log and my name/description -->
+      <header class="header">
+        <div class="title">
+          <h1>Cat Clicker</h1>
+          <h3 id="score">You have clicked Bob <strong>0</strong> times and Steve <strong>0</strong> times!!</h3>
+        </div>
+      </header>
+      <div class="main_section row">
+        <div class="cat-box">
+          <h3 class="name-text" id="cat-name-1"></h3>
+          <img class="main_image" src="pics/cat1.jpeg" alt="Bob the cat" id="cat1-picture">
+        </div>
+        <div class="cat-box">
+          <h3 class="name-text" id="cat-name-2"></h3>
+          <img class="main_image" src="pics/cat2.jpg" alt="Steve the cat" id="cat2-picture">
+        </div>
       </div>
-    </header>
-    <div class="main_section main_image">
-      <img src="pics/cat1.jpeg" alt="picture of cat 1" id="cat1-picture">
     </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="app.js"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="cat.js"></script>
+    <script src="app.js"></script>
+  </body>
 
 </html>
