after adding 5 cats

--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
       <header class="header">
         <div class="title">
           <h1>Cat Clicker</h1>
-          <h3 id="score">You have clicked Bob <strong>0</strong> times and Steve <strong>0</strong> times!!</h3>
         </div>
       </header>
       <div class="main_section row">
-        <div class="cat-box">
-          <h3 class="name-text" id="cat-name-1"></h3>
-          <img class="main_image" src="pics/cat1.jpeg" alt="Bob the cat" id="cat1-picture">
+        <div class="cat-selection" id="cat-selection">
+          <h3 class="name-text" id="cat-list-title">Cats to choose!</h3>
         </div>
         <div class="cat-box">
-          <h3 class="name-text" id="cat-name-2"></h3>
-          <img class="main_image" src="pics/cat2.jpg" alt="Steve the cat" id="cat2-picture">
+          <h3 class="name-text" id="cat-name"></h3>
+          <h3 id="score">You have clicked Bob <strong>0</strong> times and Steve <strong>0</strong> times!!</h3>
+          <img class="main_image" src="pics/cat2.jpg" alt="Steve the cat" id="cat-picture">
         </div>
       </div>
     </div>
